[gd_scene load_steps=7 format=2]

[ext_resource path="res://Cinematics/CINE_INTRO/CINE_INTRO.gd" type="Script" id=1]
[ext_resource path="res://Cinematics/cinematic_background.jpg" type="Texture" id=2]
[ext_resource path="res://Cinematics/CINE_INTRO/img_intro_01.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Manjari-Bold.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 5
outline_color = Color( 0.12549, 0.156863, 0.0196078, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 34
outline_size = 5
outline_color = Color( 0.12549, 0.156863, 0.0196078, 1 )
font_data = ExtResource( 4 )

[node name="CINE_INTRO" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 500.723, 299.815 )
texture = ExtResource( 2 )

[node name="img1" type="Sprite" parent="."]
position = Vector2( 649.832, 307.717 )
texture = ExtResource( 3 )

[node name="txt1" type="Label" parent="."]
margin_left = -70.0474
margin_top = 287.853
margin_right = 408.952
margin_bottom = 353.853
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.537255, 0.713726, 1 )
text = "Un sueño"
align = 1

[node name="txt2" type="Label" parent="."]
margin_left = 40.1071
margin_top = 44.4195
margin_right = 519.107
margin_bottom = 110.42
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.537255, 0.713726, 1 )
text = "Incontrolable"
align = 1

[node name="txt3" type="Label" parent="."]
margin_left = 637.159
margin_top = 64.8766
margin_right = 1116.16
margin_bottom = 130.877
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.537255, 0.713726, 1 )
text = "El despertar"
align = 1

[node name="txt4" type="Label" parent="."]
margin_left = 32.1707
margin_top = 506.983
margin_right = 511.171
margin_bottom = 572.983
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.537255, 0.713726, 1 )
text = "El frío de la noche"
align = 1

[node name="txt5" type="Label" parent="."]
margin_left = 408.903
margin_top = 350.75
margin_right = 909.903
margin_bottom = 416.75
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.537255, 0.713726, 1 )
text = "Los demonios"
align = 1
